--- a/lib/projects.json
+++ b/lib/projects.json
@@ -3,73 +3,85 @@
         "title": "Power Outage Predictions",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "In this project, we analyze a dataset of major power outages in the U.S. to answer the question: Is the average outage duration for power outages caused by severe weather equal to the average outage duration for power outages caused by equipment failure?",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
 
     },
     {
         "title": "Quasi cupiditate nostrum alias.",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Numquam asperiores consectetur quae voluptatem consequatur non voluptate totam suscipit incidunt odit! Voluptas quisquam facilis maiores dolore iste, enim voluptates rerum ab officia omnis perferendis modi ipsa adipisci quidem cumque.",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     },
     {
         "title": "Amet delectus rerum velit.",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Dolor, odit placeat sapiente aut quidem laudantium amet quo blanditiis tempore corrupti neque excepturi laborum ea animi molestias debitis eligendi adipisci consequuntur eos nobis voluptas deserunt eveniet. Aliquam, asperiores culpa!",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     },
     {
         "title": "Laborum, deleniti? Vitae, qui?",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Non corrupti enim laborum aliquam, saepe culpa unde facere doloribus rerum numquam consequatur! Placeat ratione magnam fuga a fugiat voluptas ex quaerat, sit voluptate impedit. Eaque dolore aperiam numquam ipsam?",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     },
     {
         "title": "Aliquam ipsa ea saepe?",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Doloribus corporis corrupti eos praesentium accusamus quia. Deleniti voluptatibus non accusantium eos culpa suscipit similique quos praesentium laboriosam reprehenderit, excepturi maiores aspernatur quidem mollitia magni unde, itaque animi, labore earum.",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     },
     {
         "title": "Fuga assumenda vel voluptatibus!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Atque similique perferendis omnis earum modi vitae, aperiam ducimus, optio repellat ea magni aspernatur quae quo accusamus, voluptas dolore ipsa quis beatae necessitatibus perspiciatis eos! Praesentium repudiandae corrupti doloribus deserunt.",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     },
     {
         "title": "Voluptas quidem illum sint!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Vitae nulla quisquam minima officia amet quasi sapiente sed aperiam, fugiat, commodi explicabo numquam odit, rem veritatis provident eligendi placeat praesentium illo possimus quia. Natus, architecto in? Neque, inventore quis!",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     },
     {
         "title": "Et alias rem nostrum!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Impedit eaque pariatur id cumque animi! Reprehenderit ad praesentium natus dolor dolore, iure vero in eligendi, at enim veniam rem maiores expedita dicta nulla sequi fuga fugiat et! Odit, animi!",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     },
     {
         "title": "Fugiat reprehenderit quo voluptas.",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Officiis laudantium cupiditate sed vero recusandae aliquid veritatis. Nulla, placeat doloremque! Excepturi nam ullam nostrum hic laborum animi neque possimus amet, esse, reprehenderit pariatur aut id ipsum, fuga unde molestias.",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     },
     {
         "title": "Officia tempore similique impedit.",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Libero ad laboriosam numquam alias sequi est inventore enim! Est nisi beatae consequuntur molestias quod doloribus, suscipit nihil laboriosam nesciunt, laudantium nobis delectus facilis id illo accusantium modi totam eum.",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     },
     {
         "title": "Labore saepe tenetur architecto!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Natus fugit sapiente, magnam beatae atque ipsa ratione eveniet dolor commodi? Quae ad laudantium libero facilis veniam vitae fugit ex totam quia tempora omnis eligendi, saepe recusandae ipsum fugiat obcaecati!",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     },
     {
         "title": "Pariatur debitis corporis quam!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Iste veniam ratione tenetur distinctio quo possimus, quaerat laboriosam modi exercitationem nihil quia cupiditate in? Delectus quam, saepe quisquam tenetur modi soluta a velit officiis placeat recusandae consequatur commodi voluptates!",
-        "year": "2025"
+        "year": "2025",
+        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
     }
 ]
