--- a/lib/projects.json
+++ b/lib/projects.json
@@ -25,63 +25,63 @@
         "title": "Laborum, deleniti? Vitae, qui?",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Non corrupti enim laborum aliquam, saepe culpa unde facere doloribus rerum numquam consequatur! Placeat ratione magnam fuga a fugiat voluptas ex quaerat, sit voluptate impedit. Eaque dolore aperiam numquam ipsam?",
-        "year": "2025",
-        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
+        "year": "2024",
+        "note": "Coming Soon"
     },
     {
         "title": "Aliquam ipsa ea saepe?",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Doloribus corporis corrupti eos praesentium accusamus quia. Deleniti voluptatibus non accusantium eos culpa suscipit similique quos praesentium laboriosam reprehenderit, excepturi maiores aspernatur quidem mollitia magni unde, itaque animi, labore earum.",
-        "year": "2025",
-        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
+        "year": "2023",
+        "note": "Coming Soon"
     },
     {
         "title": "Fuga assumenda vel voluptatibus!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Atque similique perferendis omnis earum modi vitae, aperiam ducimus, optio repellat ea magni aspernatur quae quo accusamus, voluptas dolore ipsa quis beatae necessitatibus perspiciatis eos! Praesentium repudiandae corrupti doloribus deserunt.",
-        "year": "2025",
-        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
+        "year": "2024",
+        "note": "Coming Soon"
     },
     {
         "title": "Voluptas quidem illum sint!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Vitae nulla quisquam minima officia amet quasi sapiente sed aperiam, fugiat, commodi explicabo numquam odit, rem veritatis provident eligendi placeat praesentium illo possimus quia. Natus, architecto in? Neque, inventore quis!",
-        "year": "2025",
-        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
+        "year": "2023",
+        "note": "Coming Soon"
     },
     {
         "title": "Et alias rem nostrum!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Impedit eaque pariatur id cumque animi! Reprehenderit ad praesentium natus dolor dolore, iure vero in eligendi, at enim veniam rem maiores expedita dicta nulla sequi fuga fugiat et! Odit, animi!",
         "year": "2025",
-        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
+        "note": "Coming Soon"
     },
     {
         "title": "Fugiat reprehenderit quo voluptas.",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Officiis laudantium cupiditate sed vero recusandae aliquid veritatis. Nulla, placeat doloremque! Excepturi nam ullam nostrum hic laborum animi neque possimus amet, esse, reprehenderit pariatur aut id ipsum, fuga unde molestias.",
         "year": "2025",
-        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
+        "note": "Coming Soon"
     },
     {
         "title": "Officia tempore similique impedit.",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Libero ad laboriosam numquam alias sequi est inventore enim! Est nisi beatae consequuntur molestias quod doloribus, suscipit nihil laboriosam nesciunt, laudantium nobis delectus facilis id illo accusantium modi totam eum.",
-        "year": "2025",
-        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
+        "year": "2024",
+        "note": "Coming Soon"
     },
     {
         "title": "Labore saepe tenetur architecto!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Natus fugit sapiente, magnam beatae atque ipsa ratione eveniet dolor commodi? Quae ad laudantium libero facilis veniam vitae fugit ex totam quia tempora omnis eligendi, saepe recusandae ipsum fugiat obcaecati!",
-        "year": "2025",
-        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
+        "year": "2022",
+        "note": "Coming Soon"
     },
     {
         "title": "Pariatur debitis corporis quam!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Iste veniam ratione tenetur distinctio quo possimus, quaerat laboriosam modi exercitationem nihil quia cupiditate in? Delectus quam, saepe quisquam tenetur modi soluta a velit officiis placeat recusandae consequatur commodi voluptates!",
-        "year": "2025",
-        "github": "https://github.com/sophia-vo/Power-Outage-Predictions.git"
+        "year": "2023",
+        "note": "Coming Soon"
     }
 ]
