--- a/lib/projects.json
+++ b/lib/projects.json
@@ -22,11 +22,11 @@
         "pdf": "https://drive.google.com/file/d/1CTU9VsfCuwZ3VvT4qk_8XfIOPxHJ1HOC/view?usp=sharing"
     },
     {
-        "title": "Laborum, deleniti? Vitae, qui?",
+        "title": "Abortion Visualisation Report",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Non corrupti enim laborum aliquam, saepe culpa unde facere doloribus rerum numquam consequatur! Placeat ratione magnam fuga a fugiat voluptas ex quaerat, sit voluptate impedit. Eaque dolore aperiam numquam ipsam?",
-        "year": "2024",
-        "note": "Coming Soon"
+        "description": "Two visualizations illustrating the same data in two different ways to support and oppose the proposition 'States with fewer abortion clinics have more residents seeking abortion care out of state'",
+        "year": "2025",
+        "github": "https://github.com/simonerao/Abortion-Visualization-Report.git"
     },
     {
         "title": "Aliquam ipsa ea saepe?",
